# aws-distriubted-scrapy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapyd.conf  scrapyd.sh
config/: config_alembic.py
infrastructure/: ec2.tf  ecr.tf  ecs.tf  iam.tf  provider.tf  variable.tf  vpc.tf
libs/database/db_data/: db_data_helper.py  db_data_models.py
libs/scrapy_queue/: job_storage.py  postgres.py  spider_queue.py
tests/: test_spider_queue.py  utils.py
