[tool.poetry]
name = "aws-distriubted-scrapy"
version = "0.1.0"
description = ""
authors = ["amin saffar <amin@stackadoc.com>"]
readme = "README.md"
packages = [{include = "aws_distriubted_scrapy"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
scrapyd = "^1.4.3"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
freezegun = "^1.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
